# ConnectFourAILib

./: Makefile  Makefile.am  README.md  configure.ac
Demo/: demo.sh  main.py
src/: ConnectFourAI.i  ConnectFourPlayboard.cpp  ConnectFourPlayboard.h  ConnectFourPlayerHuman.cpp  ConnectFourPlayerHuman.h  ConnectFourPlayerInterface.cpp  ConnectFourPlayerInterface.h  ConnectFourPlayerMinimax.cpp  ConnectFourPlayerMinimax.h  ConnectFourPlayerMinimaxAlphaBeta.cpp  ConnectFourPlayerMinimaxAlphaBeta.h
